--- a/vars/main.yml
+++ b/vars/main.yml
@@ -7,5 +7,6 @@ _distribution_specific: {
     _certs_dest_dir: /etc/ca-certificates/trust-source/anchors
     }
 }
-_ca_trust_certs_dest_dir: "{{ _distribution_specific[ansible_distribution]['_certs_dest_dir'] }}"
+_ca_trust_certs_dest_dir: "{{ _distribution_specific[ansible_distribution]._certs_dest_dir }}"
 
+_trust_certs_dir: /tmp/certs
