--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,34 +1,6 @@
 ---
-- name: Include get_from_ca
-  include_tasks: get_from_ca.yml
-  when: inventory_hostname in groups[pki_group]
-
-- name: Get certificats list
-  find:
-    path: "{{ _trust_certs_dir }}"
-    patterns: '*.pem, *.cert'
-  register: _certificates_files
-  delegate_to: localhost
-  run_once: true
-
-- name: copy root ca certificate on archlinux hosts
-  copy:
-    src: "{{ item.path }}"
-    dest: "{{ _ca_trust_certs_dest_dir }}"
-    owner: root
-    group: root
-    mode: 0644
-  with_items: "{{ _certificates_files.files }}"
-  when: ansible_distribution == 'Archlinux'
-  notify: Trust root ca Archlinux
-
-- name: copy root ca certificate on Ubuntu hosts
-  copy:
-    src: "{{ item.path }}"
-    dest: "{{ _ca_trust_certs_dest_dir }}/{{ item.path | basename }}.crt"
-    owner: root
-    group: root
-    mode: 0644
-  with_items: "{{ _certificates_files.files }}"
-  when: ansible_distribution == 'Ubuntu'
-  notify: Trust root ca Ubuntu
+- include_tasks: process_ca.yml
+  loop: "{{ groups[pki_group] }}"
+  loop_control:
+    loop_var: _ca_name
+  when: inventory_hostname not in groups[pki_group]
