--- a/tasks/process_ca.yml
+++ b/tasks/process_ca.yml
@@ -15,6 +15,7 @@
     owner: root
     group: root
     mode: 0644
+    remote_src: true
   when: ansible_distribution == 'Archlinux'
   notify: Trust root ca Archlinux
 
@@ -26,5 +27,6 @@
     owner: root
     group: root
     mode: 0644
+    remote_src: true
   when: ansible_distribution == 'Ubuntu'
   notify: Trust root ca Ubuntu 
